Fix alignment of vertical phones in the about page

--- a/css/main.css
+++ b/css/main.css
@@ -550,7 +550,7 @@ a:hover {
     }
 
     #about .main aside section p {
-        float: none;
+        float: none !important;
     }
 }
 
